# Claude-dev

./: .env.example  .gitignore  README.md  config.yaml  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  vercel.json
investment_analyzer/: __init__.py  __main__.py  cli.py  config.py  logging_utils.py  orchestrator.py
investment_analyzer/agents/: __init__.py  base.py  bear.py  bull.py  data_collector.py  fundamental.py  judge.py  technical.py
investment_analyzer/agents/prompts/: bear.md  bull.md  data_collector.md  fundamental.md  judge.md  technical.md
investment_analyzer/data/: __init__.py  edgar_client.py  indicators.py  yfinance_client.py
investment_analyzer/data/fixtures/: AAPL_edgar.json  AAPL_yf.json
investment_analyzer/models/: __init__.py  analysis.py  report.py  research.py
investment_analyzer/rendering/: __init__.py  console.py  markdown.py
server/: package.json  tsconfig.json
server/src/: index.ts
server/src/domain/: cidr.ts  listener.ts  loadBalancer.ts  targetGroup.ts  vpc.ts
server/src/middleware/: validate.ts
server/src/routes/: listeners.ts  loadBalancers.ts  schemas.ts  targetGroups.ts  vpcs.ts
server/src/seed/: seed.ts
server/src/store/: ids.ts  memory.ts
shared/: package.json  tsconfig.json
shared/src/: index.ts
tests/: test_agents.py  test_data_layer.py  test_indicators.py  test_orchestrator.py
web/: index.html  package.json  tsconfig.json
web/src/: App.tsx
web/src/api/: client.ts
web/src/components/: ListenerRulesPanel.tsx  Shell.tsx
web/src/pages/: ComingSoonPage.tsx  (+10 more)
(+1 files in other folders)
