[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "investment-analyzer"
version = "1.0.0"
description = "A multi-agent AI application that produces balanced investment analysis using six specialized Claude agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Investment Analyzer Contributors" },
]
dependencies = [
    "anthropic>=0.40.0",
    "yfinance>=0.2.40",
    "pandas>=2.2.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
investment-analyzer = "investment_analyzer.__main__:main"

[tool.setuptools.packages.find]
include = ["investment_analyzer*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
